test/error/test-02.ifj21
-- 2 (syntax error)
require "ifj21"

function main()
    local local n: number = 2.2
end
